--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,45 @@ section {
 }
 
 
+/* NAVIGATION */
+
+.navi-container {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    font-family: 'Great Vibes', cursive;
+    color: gold;
+    font-size: 30px;
+    display: inline-block;
+}
+
+.navigation,
+.navi-item {
+    display: inline-block;
+}
+
+.navi-item {
+    list-style-type: none;
+}
+
+.navigation a {
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+    padding: 4px;
+}
+
+.navi-container a:hover {
+    color: goldenrod;
+    cursor: pointer;
+}
+
+
 /* HERO */
 
 .hero {
@@ -54,7 +93,7 @@ section {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .hero-subtitle {
@@ -158,6 +197,47 @@ footer {
     height: 42px;
     border-radius: 50%;
     margin: 0 10px;
+}
+
+
+/* MEDIA */
+
+@media (max-width: 768px) {
+    .navigation {
+        margin: 0;
+        padding: 0;
+    }
+    .navi-item a {
+        margin: 0;
+    }
+    .navi-item {
+        display: none;
+        text-align: right;
+        margin: 7px 0;
+    }
+    .navi-hamburger {
+        color: #fff;
+        border: solid 2px;
+        border-radius: 8px;
+        padding: 8px;
+        font-size: 20px;
+    }
+    .navi-hamburger:hover {
+        color: goldenrod;
+        cursor: pointer;
+    }
+    .navigation:hover {
+        text-align: right;
+    }
+    .navigation:hover .navi-item {
+        display: block;
+    }
+}
+
+@media (min-width: 768px) {
+    .navi-hamburger {
+        display: none;
+    }
 }
 
 
